--- a/BACK-END/AiProfileApp/pom.xml
+++ b/BACK-END/AiProfileApp/pom.xml
@@ -36,6 +36,7 @@
 		<junit-platform-launcher.version>1.8.2</junit-platform-launcher.version>
 		<jakarta-validation.version>3.0.2</jakarta-validation.version>
 		<hibernate.types.version>2.21.1</hibernate.types.version>
+		<poi-ooxml.version>5.3.0</poi-ooxml.version>
 
 		<!-- Plugin Versions -->
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
@@ -188,6 +189,12 @@
 			<groupId>com.cloudinary</groupId>
 			<artifactId>cloudinary-core</artifactId>
 			<version>${cloudinary.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi-ooxml.version}</version>
 		</dependency>
 
 		<dependency>
